Word-wrap fix.

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -306,6 +306,7 @@ ul
 
 .battle-rules
 	padding-bottom: 2rem
+	word-wrap: break-word
 
 p 
 	margin: 0
